First steps in design

--- a/audio/index.html
+++ b/audio/index.html
@@ -7,6 +7,7 @@
     <title>No Soy Hipster / que quede claro... </title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="fonts/font.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -15,14 +16,18 @@
       <header>
 
       </header>
-      <div class="section" id="initial">
-        <h1 id="initial__animation">NSH</h1>
-        <h2>No Soy Hipster</h2>
-        <p>Música / mood</p>
+      <div class="section initial" id="initial">
+        <div class="initial__contents">
+          <h1 id="initial__animation">NSH</h1>
+          <h2>No Soy Hipster</h2>
+          <p class="initial__desc">Música / mood / tastes</p>
+        </div>
       </div>
     </div>
 
 <!--javascript plugins-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/jquery.shuffleLetters.js"></script>
+    <script src="js/min.js"></script>
   </body>
 </html>
