--- a/audio/index.html
+++ b/audio/index.html
@@ -22,11 +22,56 @@
           <h2>No Soy Hipster</h2>
           <p class="initial__desc">Música / mood / tastes</p>
         </div>
+        <div class="container__svg">
+          <svg version="1.1" class="wire-wrapper" id="animation" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 478.5 699" style="display: block;" xml:space="preserve">
+
+          <!-- Cord -->
+          <g>
+            <path d="M87.3,501.7c0,0,18.4,161.6,29.3,186.4" style="stroke-dasharray: 189, 189; stroke-dashoffset: 0;"></path>
+            <path d="M86.3,577.7c0,0,12.4,90.5,17.4,100.4" style="stroke-dasharray: 102, 102; stroke-dashoffset: 0;"></path>
+          </g>
+
+          <!-- Earpiece -->
+          <g>
+            <path d="M44.2,488.2c-22.3-17-34.5-49.7-34.5-81.5c0-24.7,5-44.8,17.7-58.6" style="stroke-dasharray: 155, 155; stroke-dashoffset: 0;"></path>
+            <path d="M58.8,330.4c7.7-2,16.5-3.1,26.4-3.4c1,0,2.1,0,3.1,0c30.7,1.7,68.8,42.4,68.1,90.5c-0.1,5.9-0.2,12.4-0.9,19" style="stroke-dasharray: 172, 172; stroke-dashoffset: 0;"></path>
+            <path d="M84,327c0,0,63.1,5,62.8,106.4" style="stroke-dasharray: 135, 135; stroke-dashoffset: 0;"></path>
+            <path d="M61.3,330.3c0,0,95.5,22.2,50.7,165.1" style="stroke-dasharray: 194, 194; stroke-dashoffset: 0;"></path>
+            <path d="M149.4,461.7c-8.1,19-25.7,35-64.2,38.3l-3.4,0" style="stroke-dasharray: 83, 83; stroke-dashoffset: 0;"></path>
+            <path d="M142.5,459.4c0,0-0.5,14.4-12.9,26.8" style="stroke-dasharray: 31, 31; stroke-dashoffset: 0;"></path>
+          </g>
+
+          <!-- Microphone -->
+          <g>
+            <path d="M383.6,514.1c0,0,28.8-0.9,38.3,0.5c12.5,1.8,48.7,13.9,48.7,13.9l-4,6c-206.3-45.2-334.4-108-334.4-108
+              l-0.3,25.9C277,527.8,459.2,558.8,459.2,558.8c6-2.5,7.5-8.5,7.5-8.5v-15.9" style="stroke-dasharray: 848, 848; stroke-dashoffset: 0;"></path>
+            <path d="M471.4,527.5l0.2,22.4c0,0-5.5,11.1-14.4,8.6" style="stroke-dasharray: 41, 41; stroke-dashoffset: 0;"></path>
+            <polyline points="152.6,435.8 140,425.8 131.2,425.6 	"></polyline>
+          </g>
+
+          <!-- Headband -->
+          <g>
+            <path d="M17.2,264.5c0,0,20.9-4.5,27.8-2.5l37.8,309.7c0,0-14.4,11.9-27.8,0L17.2,264.5z" style="stroke-dasharray: 680, 680; stroke-dashoffset: 0;"></path>
+            <path d="M82.8,571.8l6.5,1.5L75.4,455.9c0,0-8.1-14-11.6-39.4" style="stroke-dasharray: 167, 167; stroke-dashoffset: 0;"></path>
+            <path d="M61.2,393.5c-2.6-16,1.2-35.1,1.2-35.1l-10.9-93L45,262c0,0-2.5-28.8-2.5-70.1c0-41.3,22-109.6,57.2-138.2
+              c39.8-32.3,68.6-48.2,113.9-44.2c45.2,4,106.9,28.5,148.2,98.9c23.8,40.5,47.2,114.8,38.3,184l-11.9,99.9c0,0-1.1,4.9-5.4,8.2
+              c-4.7,3.6-19.5,1.1-27.8-3.2c-0.7-0.4,20.3,12.8,23.6-8.4c0,0,8.6-54.4,5-60.7c-2.7-4.7-20.1-4.6-20.1-4.6" style="stroke-dasharray: 1115, 1115; stroke-dashoffset: 0;"></path>
+            <path d="M55,571.8c0,0,21.4,15.9,34.3,1.5" style="stroke-dasharray: 38, 38; stroke-dashoffset: 0;"></path>
+            <path d="M17.2,264.5c-2.6-55.3-2.8-54.6-3-74.6C13.7,130.8,56,70.6,56,70.6c36.8-54.2,127-60.5,127-60.5" style="stroke-dasharray: 348, 348; stroke-dashoffset: 0;"></path>
+            <path d="M51.5,265.5c0,0-3.4-27.9-8.3-40.3" style="stroke-dasharray: 42, 42; stroke-dashoffset: 0;"></path>
+            <path d="M128.6,32.3c0,0,60.7-32.8,124.3,6c0,0,128.1,66.5,117.3,259.5c-1,17.9-9.9,30.8-9.9,30.8l-1.5,6.5" style="stroke-dasharray: 469, 469; stroke-dashoffset: 0;"></path>
+            <path d="M374.1,381.5c-0.8,7.9-4.5,14-8.2,13.6l-7.8-1.5c-3.7-0.4-5.9-6.4-5.1-14.4l3.9-36.7c0.8-7.9,4.5-14,8.2-13.6
+              l7.7,0.8c3.7,0.4,6,7.1,5.2,15.1L374.1,381.5z" style="stroke-dasharray: 158, 158; stroke-dashoffset: 0;"></path>
+            <path d="M355.1,397.3c0,0-2.6-0.6-1-7" style="stroke-dasharray: 8, 8; stroke-dashoffset: 0;"></path>
+          </g>
+          </svg>
+        </div>
       </div>
     </div>
 
 <!--javascript plugins-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/walkway.js"></script>
     <script src="js/jquery.shuffleLetters.js"></script>
     <script src="js/min.js"></script>
   </body>
