Added animation and sound

--- a/audio/index.html
+++ b/audio/index.html
@@ -67,6 +67,9 @@
           </svg>
         </div>
       </div>
+      <div class="section">
+        
+      </div>
     </div>
 
 <!--javascript plugins-->
