--- a/audio/index.html
+++ b/audio/index.html
@@ -14,8 +14,11 @@
   <body>
     <div class="wrapper">
       <header>
-
+        <h1>NSH<span class="normalText">No soy hipster!</span></h1>
       </header>
+      <div class="section background">
+
+      </div>
       <div class="section initial" id="initial">
         <div class="initial__contents">
           <h1 id="initial__animation">NSH</h1>
@@ -68,7 +71,12 @@
         </div>
       </div>
       <div class="section">
-        
+        <div class="section__half black">
+
+        </div>
+        <div class="section__half unback">
+
+        </div>
       </div>
     </div>
 
